Fix menu__link padding on small screens

--- a/src/blocks/modules/menu/menu.scss
+++ b/src/blocks/modules/menu/menu.scss
@@ -64,7 +64,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		padding: 16px 0 16px 48px;
+		padding: 24px 0 24px 48px;
 		width: 100%;
 		height: 100%;
 		font-family: var(--font-family--bold);
@@ -89,7 +89,7 @@
 	&__icon {
 		position: absolute;
 		left: -2px;
-		top: 10px;
+		top: 13px;
 
 		@media screen and (min-width: $break_xs) {
 			left: -4px;
